--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Дизайн-студия NЁRDS</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<header class="main-header">
@@ -182,18 +183,20 @@
 			<h2 class="visually-hidden">Как до нас добраться</h2>
 			<span class="modal-close">x</span>
 		</section>
-
-		<p>
-			NЁRDS DESIGN STUDIO<br>
-			191186, Санкт-Петербург,<br>
-		</p>
-		<p>
-			тел. +7(812)275-75-75
-		</p>
-		<form action="https://echo.nerds.ru" method="post">
-			<button type="submit">Напишите нам</button>
-		</form>
-
+		
+		<div class="map-hover">
+			<p>
+				NЁRDS DESIGN STUDIO<br>
+				191186, Санкт-Петербург,<br>
+			</p>
+			<p>
+				тел. +7(812)275-75-75
+			</p>
+			<form action="https://echo.nerds.ru" method="post">
+				<button type="submit">Напишите нам</button>
+			</form>
+		</div>
+		
 		<div class="footer-social">
 			<ul class="footer-social-buttons">
 				<li><a class="social-button" href="#">Вконтакте</a></li>
