--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<title>Барбершоп «Бородинский»</title>	
+	<title>Барбершоп «Бородинский»</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">	
 </head>
 <body>
 	<header class="main-header">
