--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
+				<li class="login-icon"><img src="img/login.svg"></li>
 				<li class="login-link">Вход</li>
 			</ul>
 		</nav>
@@ -32,14 +33,17 @@
 			<ul class="features-list">
 				<li class="feature-item">
 					<h3>Быстро</h3>
+					<img src="img/advantages-rhombus.svg">
 					<p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы - счастливый обладатель стильной стрижки-минутки!</p>					
 				</li>
 				<li class="feature-item">
 					<h3>Круто</h3>
+					<img src="img/advantages-rhombus.svg">
 					<p>Забудьте, как вы стриглись раньше. Мы сделаем из Вас звезду футбола или кино! Во всяком случае внешне.</p>	
 				</li>
 				<li class="feature-item">
 					<h3>Дорого</h3>
+					<img src="img/advantages-rhombus.svg">
 					<p>Наши мастера - профессионалы своего дела и не могус стоить дешево. К тому же, разве цена не дает определенный статус?</p>	
 				</li>
 			</ul>			
@@ -61,9 +65,10 @@
 		</section>
 
 		<section class="gallery">
+			<img src="img/terminator-index.png">
 			<h2>Фотогалерея</h2>
 			<figure class="gallery-content">
-				<a href="#"><img src="img/studio.jpg" width="286" height="164" alt="Интерьер"></a>
+				<a href="#"><img src="img/gallery-preview.jpg" width="286" height="164" alt="Интерьер"></a>
 			</figure>
 			<span class="button button_gallery gallery-button-back"></span>
 			<span class="button button_gallery gallery-button-next"></span>
@@ -85,6 +90,7 @@
 		</section>
 
 		<section class="appointment">
+			<img src="img/terminator-index.png">
 			<h2>Записаться</h2>
 			<p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с Вами для подтверждения брони</p>		
 			<form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
@@ -105,6 +111,7 @@
 		</section>
 
 	</main>
+	
 	<footer class="main-footer">
 		<p class="footer-contacts">
 			Барбершоп «Бородинский»<br>
@@ -115,9 +122,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#">Вконтакте</a></li>
-				<li><a class="social-button" href="#">Фейсбук</a></li>
-				<li><a class="social-button" href="#">инстаграм</a></li>
+				<li><a class="social-button" href="#"><img src="img/vk.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="img/facebook.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="img/instagram.svg.svg"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
