--- a/item.html
+++ b/item.html
@@ -17,6 +17,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
+				<li class="login-icon"><img src="img/login.svg"></li>
 				<li class="login-link">Вход</li>
 			</ul>
 		</nav>
@@ -74,9 +75,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#">Вконтакте</a></li>
-				<li><a class="social-button" href="#">Фейсбук</a></li>
-				<li><a class="social-button" href="#">инстаграм</a></li>
+				<li><a class="social-button" href="#"><img src="img/vk.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="img/facebook.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="img/instagram.svg.svg"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
