--- a/shop.html
+++ b/shop.html
@@ -18,6 +18,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
+				<li class="login-icon"><img src="img/login.svg"></li>
 				<li class="login-link">Вход</li>
 			</ul>
 		</nav>
@@ -106,7 +107,7 @@
 						</a>			 
 					</h3>
 					<p class="catalog-item-image">
-						<a href="catalog-item.html">
+						<a href="catalog-item-product-1.html">
 							<img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
 						</a>
 					</p>
@@ -127,7 +128,7 @@
 						</a>			 
 					</h3>
 					<p class="catalog-item-image">
-						<a href="catalog-item.html">
+						<a href="catalog-item-product-2.html">
 							<img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
 						</a>
 					</p>
@@ -148,7 +149,7 @@
 						</a>			 
 					</h3>
 					<p class="catalog-item-image">
-						<a href="catalog-item.html">
+						<a href="catalog-item-product-3.html">
 							<img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
 						</a>
 					</p>
@@ -169,7 +170,7 @@
 						</a>			 
 					</h3>
 					<p class="catalog-item-image">
-						<a href="catalog-item.html">
+						<a href="catalog-item-product-4.html">
 							<img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American Crew»">
 						</a>
 					</p>
@@ -190,7 +191,7 @@
 						</a>			 
 					</h3>
 					<p class="catalog-item-image">
-						<a href="catalog-item.html">
+						<a href="catalog-item-product-5.html">
 							<img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «American Crew»">
 						</a>
 					</p>
@@ -211,7 +212,7 @@
 						</a>			 
 					</h3>
 					<p class="catalog-item-image">
-						<a href="catalog-item.html">
+						<a href="catalog-item-product-6.html">
 							<img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
 						</a>
 					</p>
@@ -242,9 +243,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#">Вконтакте</a></li>
-				<li><a class="social-button" href="#">Фейсбук</a></li>
-				<li><a class="social-button" href="#">инстаграм</a></li>
+				<li><a class="social-button" href="#"><img src="img/vk.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="img/facebook.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="img/instagram.svg.svg"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
