--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<li class="feature-item">
 					<h3>Дорого</h3>
 					<img src="img/advantages-rhombus.svg">
-					<p>Наши мастера - профессионалы своего дела и не могус стоить дешево. К тому же, разве цена не дает определенный статус?</p>	
+					<p>Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>	
 				</li>
 			</ul>			
 		</section>
