--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
 				<li class="feature-item">
 					<h3>Быстро</h3>
 					<img src="img/advantages-rhombus.svg">
-					<p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы - счастливый обладатель стильной стрижки-минутки!</p>					
+					<p>Мы делаем свою работу быстро! Два часа<br>пролетят незаметно и вы - счастливый<br>обладатель стильной стрижки-минутки!</p>					
 				</li>
 				<li class="feature-item">
 					<h3>Круто</h3>
 					<img src="img/advantages-rhombus.svg">
-					<p>Забудьте, как вы стриглись раньше. Мы сделаем из Вас звезду футбола или кино! Во всяком случае внешне.</p>	
+					<p>Забудьте, как вы стриглись раньше.<br>Мы сделаем из Вас звезду футбола или кино!<br>Во всяком случае внешне.</p>	
 				</li>
 				<li class="feature-item">
 					<h3>Дорого</h3>
 					<img src="img/advantages-rhombus.svg">
-					<p>Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>	
+					<p>Наши мастера - профессионалы своего дела и<br>не могут стоить дешево. К тому же, разве цена<br>не дает определенный статус?</p>	
 				</li>
 			</ul>			
 		</section>
