--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Барбершоп «Бородинский»</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">	
+	<link rel="stylesheet" type="text/css" href="../css/style.css">	
 </head>
 <body>
 	<header class="main-header">
 		<nav class="main-mavigation">
 			<a class="main-header-logo">
-			<img src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
+			<img src="../img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
 			</a>
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
@@ -19,7 +19,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
-				<li class="login-icon"><img src="img/login.svg"></li>
+				<li class="login-icon"><img src="../img/login.svg"></li>
 				<li class="login-link">Вход</li>
 			</ul>
 		</nav>
@@ -33,17 +33,17 @@
 			<ul class="features-list">
 				<li class="feature-item">
 					<h3>Быстро</h3>
-					<img src="img/advantages-rhombus.svg">
+					<img src="../img/advantages-rhombus.svg">
 					<p>Мы делаем свою работу быстро! Два часа<br>пролетят незаметно и вы - счастливый<br>обладатель стильной стрижки-минутки!</p>					
 				</li>
 				<li class="feature-item">
 					<h3>Круто</h3>
-					<img src="img/advantages-rhombus.svg">
+					<img src="../img/advantages-rhombus.svg">
 					<p>Забудьте, как вы стриглись раньше.<br>Мы сделаем из Вас звезду футбола или кино!<br>Во всяком случае внешне.</p>	
 				</li>
 				<li class="feature-item">
 					<h3>Дорого</h3>
-					<img src="img/advantages-rhombus.svg">
+					<img src="../img/advantages-rhombus.svg">
 					<p>Наши мастера - профессионалы своего дела и<br>не могут стоить дешево. К тому же, разве цена<br>не дает определенный статус?</p>	
 				</li>
 			</ul>			
@@ -65,13 +65,13 @@
 		</section>
 
 		<section class="gallery">
-			<img src="img/terminator-index.png">
+			<img src="../img/terminator-index.png">
 			<h2>Фотогалерея</h2>
 			<figure class="gallery-content">
-				<a href="#"><img src="img/gallery-preview.jpg" width="286" height="164" alt="Интерьер"></a>
+				<a href="#"><img src="../img/gallery-preview.jpg" width="286" height="164" alt="Интерьер"></a>
 			</figure>
-			<span class="button button_gallery gallery-button-back"></span>
-			<span class="button button_gallery gallery-button-next"></span>
+			<span class="button button_gallery gallery-button-back"><a class="button" href="#"></a>Назад</span>
+			<span class="button button_gallery gallery-button-next"><a class="button" href="#"></a>Вперед</span>
 		</section>
 		<section class="contacts">
 			<h2>Контактная информация</h2>
@@ -90,7 +90,7 @@
 		</section>
 
 		<section class="appointment">
-			<img src="img/terminator-index.png">
+			<img src="../img/terminator-index.png">
 			<h2>Записаться</h2>
 			<p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с Вами для подтверждения брони</p>		
 			<form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
@@ -122,9 +122,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#"><img src="img/vk.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="img/facebook.svg.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="img/instagram.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../img/vk.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../img/facebook.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../img/instagram.svg.svg"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
