--- a/item.html
+++ b/item.html
@@ -8,7 +8,7 @@
 	<header class="main-header">
 		<nav class="main-mavigation">
 			<a class="main-header-logo" href="index.html">
-				<img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>			
+				<img src="../img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>			
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="news.html">Новости</a></li>
@@ -17,7 +17,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
-				<li class="login-icon"><img src="img/login.svg"></li>
+				<li class="login-icon"><img src="../img/login.svg"></li>
 				<li class="login-link">Вход</li>
 			</ul>
 		</nav>
@@ -36,12 +36,12 @@
 		<section class="product-photos">
 			<h2 class="visually-hidden">Изображение товара</h2>
 			<p class="product-photo-full">
-				<img src="img/product-big.jpg" width="460" height="498" alt="Фото всего набора">				
+				<img src="../img/product-big.jpg" width="460" height="498" alt="Фото всего набора">				
 			</p>
 			<ul class="product-photo-preview">
-				<li><img src="img/product-small-1.jpg" width="140" height="149" alt="Фото анфас"></li>
-				<li><img src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль"></li>
-				<li><img src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части"></li>	
+				<li><img src="../img/product-small-1.jpg" width="140" height="149" alt="Фото анфас"></li>
+				<li><img src="../img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль"></li>
+				<li><img src="../img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части"></li>	
 			</ul>
 		</section>
 
@@ -75,9 +75,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#"><img src="img/vk.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="img/facebook.svg.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="img/instagram.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../img/vk.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../img/facebook.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../img/instagram.svg.svg"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
