--- a/shop.html
+++ b/shop.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Магазин</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 	<header class="main-header">
 		<nav class="main-mavigation">
 			<a class="main-header-logo" href="index.html">
-				<img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>			
+				<img src="../img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»"></a>			
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="news.html">Новости</a></li>
@@ -18,7 +18,7 @@
 				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
 			<ul class="user-navigation">
-				<li class="login-icon"><img src="img/login.svg"></li>
+				<li class="login-icon"><img src="../img/login.svg"></li>
 				<li class="login-link">Вход</li>
 			</ul>
 		</nav>
@@ -108,7 +108,7 @@
 					</h3>
 					<p class="catalog-item-image">
 						<a href="catalog-item-product-1.html">
-							<img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+							<img src="../img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
 						</a>
 					</p>
 					<p class="catalog-item-price">
@@ -129,7 +129,7 @@
 					</h3>
 					<p class="catalog-item-image">
 						<a href="catalog-item-product-2.html">
-							<img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+							<img src="../img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
 						</a>
 					</p>
 					<p class="catalog-item-price">
@@ -150,7 +150,7 @@
 					</h3>
 					<p class="catalog-item-image">
 						<a href="catalog-item-product-3.html">
-							<img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
+							<img src="../img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
 						</a>
 					</p>
 					<p class="catalog-item-price">
@@ -171,7 +171,7 @@
 					</h3>
 					<p class="catalog-item-image">
 						<a href="catalog-item-product-4.html">
-							<img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American Crew»">
+							<img src="../img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American Crew»">
 						</a>
 					</p>
 					<p class="catalog-item-price">
@@ -192,7 +192,7 @@
 					</h3>
 					<p class="catalog-item-image">
 						<a href="catalog-item-product-5.html">
-							<img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «American Crew»">
+							<img src="../img/product-5.jpg" width="220" height="165" alt="Гель для волос «American Crew»">
 						</a>
 					</p>
 					<p class="catalog-item-price">
@@ -213,7 +213,7 @@
 					</h3>
 					<p class="catalog-item-image">
 						<a href="catalog-item-product-6.html">
-							<img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+							<img src="../img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
 						</a>
 					</p>
 					<p class="catalog-item-price">
@@ -243,9 +243,9 @@
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="#"><img src="img/vk.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="img/facebook.svg.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="img/instagram.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../img/vk.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../img/facebook.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../img/instagram.svg.svg"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
