--- a/Nerds/catalog.html
+++ b/Nerds/catalog.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Каталог сайтов дизайн-студии NЁRDS</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../Nerds/css/style.css">
 </head>
 <body>
 
@@ -35,7 +35,7 @@
 				<p class="price-maximum">До<input type="text" name="price-max" value="12000"></p>
 
 				<fieldset>
-					<legend>Сетка:</legend>
+					<legend class="radio-header">Сетка:</legend>
 					<ul>
 						<li class="filter-option">
 							<input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-grid" value="adaptive" checked>
@@ -52,7 +52,7 @@
 				</fieldset>
 
 				<fieldset>
-					<legend>Особенности:</legend>
+					<legend class="checkbox-header">Особенности:</legend>
 					<ul>
 						<li class="filter-option">
 							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="slider" checked>
@@ -90,7 +90,7 @@
 			<p class="filter-results-heading">Сортировать:</p>
 			<p>
 				<ul class="filter-results-options">
-					<li class="filter-results-option">По цене</li>
+					<li class="filter-results-option pagination-item-current">По цене</li>
 					<li class="filter-results-option">По типу</li>
 					<li class="filter-results-option">По названию</li>
 					<li class="filter-results-option"><img src="filter-button-down.svg"></li>
