--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Дизайн-студия NЁRDS</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../Nerds/css/style.css">
 </head>
 <body>
 	<header class="main-header">
@@ -29,10 +29,10 @@
 
 			<ul class="slider-points">
 				<li class="slider-1">
-					<p>Долго,дорого,<br>
+					<p class="slider-header">Долго,дорого,<br>
 						скрупулезно
 					</p>
-					<p>Математически выверенный дизайн<br>
+					<p class="slider-text">Математически выверенный дизайн<br>
 						для вашего сайта или мобильного приложения						
 					</p>
 					<form action="https//:www.nerds.ru/info.html">
@@ -42,10 +42,10 @@
 				</li>
 
 				<li class="slider-2">
-					<p>Любим математику<br>
+					<p class="slider-header">Любим математику<br>
 						как никто другой
 					</p>
-					<p>Никакого креатива, только математические формулы<br>
+					<p class="slider-text">Никакого креатива, только математические формулы<br>
 						для расчета идеальных пропорций						
 					</p>
 					<form action="https//:www.nerds.ru/info.html">
@@ -55,10 +55,10 @@
 				</li>
 
 				<li class="slider-3">
-					<p>Только ночь,<br>
+					<p class="slider-header">Только ночь,<br>
 						только хардкор
 					</p>
-					<p>Работать днем, как все? Мы против этого.<br>
+					<p class="slider-text">Работать днем, как все? Мы против этого.<br>
 						Ближе к полуночи работа только начинается.						
 					</p>
 					<form action="https//:www.nerds.ru/info.html">
@@ -92,7 +92,7 @@
 			<ul class="product-list">
 				<li class="product-1">
 					<img src="img/product-1.jpg width="300" height="146" alt="product-1"">
-					<p>Веб-сайты</p>
+					<p class="product-header">Веб-сайты</p>
 					<p>Мир никогда не будет прежним<br>
 						после того, как увидит Ваш сайт!						
 					</p>
@@ -103,7 +103,7 @@
 
 				<li class="product-2">
 					<img src="img/product-2.jpg width="300" height="146" alt="product-2"">
-					<p>Приложения</p>
+					<p class="product-header">Приложения</p>
 					<p>Покорите топ-10 приложений в<br>
 						AppStore и Google Play						
 					</p>
@@ -114,7 +114,7 @@
 
 				<li class="product-3">
 					<img src="img/product-3.jpg width="300" height="146" alt="product-3"">
-					<p>Презентации</p>
+					<p class="product-header">Презентации</p>
 					<p>Вы даже не подозреваете,<br>
 						насколько Вы изумительны!						
 					</p>
@@ -130,29 +130,29 @@
 
 			<h2 class="visually-hidden">О нас</h2>
 
-			<p>Мы — маленькая, но гордая<br>
+			<p class="presentation-header">Мы — маленькая, но гордая<br>
 			дизайн-студия из Краснодара.</p>
 			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
 			превыше креатива. Работаем не покладая рук, как роботы.</p>
-			<p>Выполняем заказы на разработку:<br>
-			Веб-сайтов любой сложности<br>
+			<p class="presentation-underheader-1">Выполняем заказы на разработку:</p>
+			<p>Веб-сайтов любой сложности<br>
 			Мобильных приложений для iOS и Android<br>
 			Слайдшоу и видео для корпоративных презентаций</p>
 			<img src="img/logo2.svg">
-			<p>с 2004 года Любим точность во всем:</p>
+			<p class="presentation-underheader-2">с 2004 года Любим точность во всем:</p>
 			<p>
 				<ul class="advantages-list">
-					<li>146%<br>
-						Уровень<br>
-						самоотдачи
+					<li class="advantages-list-value">146%<br>
+						<p class="advantages-list-text">Уровень<br>
+						самоотдачи</p>
 					</li>
-					<li>100%<br>
-						Соблюдение<br>
-						сроков
+					<li class="advantages-list-value">100%<br>
+						<p class="advantages-list-text">Соблюдение<br>
+						сроков</p>
 					</li>
-					<li>50%<br>
-						Минимальная<br>
-						предоплата
+					<li class="advantages-list-value">50%<br>
+						<p class="advantages-list-text">Минимальная<br>
+						предоплата</p>
 					</li>
 				</ul>
 			</p>
@@ -185,13 +185,11 @@
 		</section>
 		
 		<div class="map-hover">
-			<p>
-				NЁRDS DESIGN STUDIO<br>
-				191186, Санкт-Петербург,<br>
+			<p class="map-header">NЁRDS DESIGN STUDIO</p>
+			<p>191186, Санкт-Петербург,<br>
+				ул. Б. Конюшенная, д. 19/8
 			</p>
-			<p>
-				тел. +7(812)275-75-75
-			</p>
+			<p>тел. +7(812)275-75-75</p>
 			<form action="https://echo.nerds.ru" method="post">
 				<button type="submit">Напишите нам</button>
 			</form>
@@ -205,9 +203,8 @@
 			</ul>			
 		</div>
 
-		<p>Давайте дружить, это выгодно!<br>
-			Скидка 10% для друзей из социальных сетей.
-		</p>
+		<p class="social-header">Давайте дружить, это выгодно!</p>
+		<p class="social-text">Скидка 10% для друзей из социальных сетей.</p>
 		
 	</footer>
 
