--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Document</title>
-		<title>Сайт находится на обслуживании</title>
+		<title>Website on maintenance, come back later!</title>
 	</head>
 	<body style="background: url(images/bg.jpg) top center no-repeat; font-family: Arial; color:#fff;">
 		<div style="width:900px; margin:0 auto;">
-			<h1 style="text-align:center; font-size:46px; margin-top:160px;">Сайт на обслуживании, зайдите позже!</h1>
-			<p style="font-size:20px; margin-top:50px; border-bottom: 1px solid #fff; padding-bottom:40px;">В настоящее время на сайте ведутся технические работы. Зайдите пожалуйста позже или свяжитесь с нами одним из следующих способов:</p>
+			<h1 style="text-align:center; font-size:46px; margin-top:160px;">Website on maintenance, come back later!</h1>
+			<p style="font-size:20px; margin-top:50px; border-bottom: 1px solid #fff; padding-bottom:40px;">Currently, the site is carrying out technical work. Please come back later or contact us in one of the following ways:</p>
 			<div style="width:33%; float:left; color: #555; text-align:center; font-size:24px;">
-				<p>Тел.: 333-33-33</p>
+				<p>Tel.: 333-33-33</p>
 			</div>
 			<div style="width:33%; float:left; color: #555; text-align:center; font-size:24px;">
-				<p>E-mail: admin@site.ru</p>
+				<p>E-mail: admin@adenworker.github.io</p>
 			</div>
 			<div style="width:33%; float:left; color: #555; text-align:center; font-size:24px;">
-				<p>Скайп: admsite_ru</p>
+				<p>Skype: adenworker.github.io</p>
 			</div>
 		</div>
 	</body>
