--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 	</head>
 	<body style="background: url(images/bg.jpg) top center no-repeat; font-family: Arial; color:#fff;">
 		<div style="width:900px; margin:0 auto;">
-			<h1 style="text-align:center; font-size:46px; margin-top:160px;">Website on maintenance, come back later!</h1>
-			<p style="font-size:20px; margin-top:50px; border-bottom: 1px solid #fff; padding-bottom:40px;">Currently, the site is carrying out technical work. Please come back later or contact us in one of the following ways:</p>
-			<div style="width:33%; float:left; color: #555; text-align:center; font-size:24px;">
+			<h1 style="text-align:center; font-size:46px; margin-top:160px;">Website on maintenance,<br>come back later!</h1>
+			<p style="font-size:20px; margin-top:50px; border-bottom: 1px solid #fff; padding-bottom:40px;">Currently, the site is carrying out technical work.<br>Please come back later or contact us in one of the following ways:</p>
+			<div style="width:33%; float:left; color: white; text-align:center; font-size:24px;">
 				<p>Tel.: 333-33-33</p>
 			</div>
-			<div style="width:33%; float:left; color: #555; text-align:center; font-size:24px;">
+			<div style="width:33%; float:left; color: white; text-align:center; font-size:24px;">
 				<p>E-mail: admin@adenworker.github.io</p>
 			</div>
-			<div style="width:33%; float:left; color: #555; text-align:center; font-size:24px;">
+			<div style="width:33%; float:left; color: white; text-align:center; font-size:24px;">
 				<p>Skype: adenworker.github.io</p>
 			</div>
 		</div>
