--- a/Barbershop/index.html
+++ b/Barbershop/index.html
@@ -20,7 +20,9 @@
 			</ul>
 			<ul class="user-navigation">
 				<li class="login-icon"><img src="../img/login.svg"></li>
-				<li class="login-link">Вход</li>
+				<li class="login-link">
+					<a class="login-link" href="login.html">Вход</a>
+				</li>
 			</ul>
 		</nav>
 	</header>
@@ -70,8 +72,8 @@
 			<figure class="gallery-content">
 				<a href="#"><img src="../img/gallery-preview.jpg" width="286" height="164" alt="Интерьер"></a>
 			</figure>
-			<span class="button button_gallery gallery-button-back"><a class="button" href="#"></a>Назад</span>
-			<span class="button button_gallery gallery-button-next"><a class="button" href="#"></a>Вперед</span>
+			<button class="button button_gallery gallery-button-back" type="button">Назад</button>
+			<button class="button button_gallery gallery-button-next" type="button">Вперед</button>
 		</section>
 		<section class="contacts">
 			<h2>Контактная информация</h2>
@@ -95,16 +97,20 @@
 			<p class="appointment-info">Укажите желаемую дату и время и мы свяжемся с Вами для подтверждения брони</p>		
 			<form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
 			<p class="appointment-item">
-				<input type="text" name="date" value="" placeholder="08.10.2017">
+				<label for="appointment-date">Дата</label>
+				<input id="appointment-date" type="text" name="date" value="" placeholder="08.10.2017">
 			</p>
-			<p class="appointment-item">
-				<input type="text" name="time" value="" placeholder="10:00">
+			<p class="appointment-time">
+				<label for="appointment-date">Время</label>
+				<input id="appointment-date" type="text" name="time" value="" placeholder="10:00">
 			</p>
-			<p class="appointment-item">
-				<input type="text" name="name" value="" placeholder="Борода">
+			<p class="appointment-name">
+				<label for="appointment-date">Ваше имя</label>
+				<input id="appointment-date" type="text" name="name" value="" placeholder="Борода">
 			</p>
-			<p class="appointment-item">
-				<input type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
+			<p class="appointment-phone">
+				<label for="appointment-date">Телефон</label>
+				<input id="appointment-date" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
 			</p>
 			<button class="button" type="submit">Отправить</button>							
 			</form>
@@ -138,23 +144,32 @@
 		<p>Введите свой логин и пароль</p>
 		<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 			<p>
-				<input class="login-icon-user" type="text" name="login" placeholder="Логин">
+				<label class="visually-hidden" for="user-login">Логин</label>
+				<input class="login-icon-user" type="text" name="login" placeholder="Логин" id="user-login">
 			</p>
-				<input class="login-icon-password" type="text" name="password" placeholder="Пароль">
+				<label class="visually-hidden" for="user-password">Пароль</label>
+				<input class="login-icon-password" type="text" name="password" placeholder="Пароль" id="user-password">
 			</p>
 			<p class="login-password-info">
-				<input class="visually-hidden" type="checkbox" name="remember">
-				Запомните меня
+				<label class="login-checkbox">
+					<input class="visually-hidden" type="checkbox" name="remember">
+					<span class="checkbox-indicator"></span>
+					Запомните меня
+				</label>
+				
 				<a class="restore" href="#">Я забыл пароль!</a>
-				<button class="button" type="submit">Войти</button>
-				<span class="modal-close">x</span>
 			</p>
+			<button class="button" type="submit">Войти</button>
 		</form>
+		<button class="modal-close" type="button">Закрыть</button>
 	</section>
 
 	<section class="modal modal-map">
 		<h2 class="visually-hidden">Как до нас добраться</h2>
-		<span class="modal-close">x</span>
+		<p>
+			<img src="../img/map.jpg" width="780" height="560" alt="Офис компании находится по адресы ул. Большая Конюшенная 19/8, Санки-Петербург">
+		</p>
+		<button class="modal-close" type="button">Закрыть</button>
 	</section>
 </body>
 </html>
