--- a/Barbershop/shop.html
+++ b/Barbershop/shop.html
@@ -259,18 +259,24 @@
 		<p>Введите свой логин и пароль</p>
 		<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 			<p>
-				<input class="login-icon-user" type="text" name="login" placeholder="Логин">
+				<label class="visually-hidden" for="user-login">Логин</label>
+				<input class="login-icon-user" type="text" name="login" placeholder="Логин" id="user-login">
 			</p>
-				<input class="login-icon-password" type="text" name="password" placeholder="Пароль">
+				<label class="visually-hidden" for="user-password">Пароль</label>
+				<input class="login-icon-password" type="text" name="password" placeholder="Пароль" id="user-password">
 			</p>
 			<p class="login-password-info">
-				<input class="visually-hidden" type="checkbox" name="remember">
-				Запомните меня
+				<label class="login-checkbox">
+					<input class="visually-hidden" type="checkbox" name="remember">
+					<span class="checkbox-indicator"></span>
+					Запомните меня
+				</label>
+				
 				<a class="restore" href="#">Я забыл пароль!</a>
-				<button class="button" type="submit">Войти</button>
-				<span class="modal-close">x</span>
 			</p>
+			<button class="button" type="submit">Войти</button>
 		</form>
+		<button class="modal-close" type="button">Закрыть</button>
 	</section>
 
 
