--- a/Barbershop/shop.html
+++ b/Barbershop/shop.html
@@ -42,28 +42,28 @@
 					<legend>Производители:</legend>
 					<ul>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" checked>
-							Baxter of California
+							<label for="filter-baxter-of-california">Baxter of California</label>
+							<input class="visually-hidden filter-input filter-input-checkbox" id="filter-baxter-of-california" type="checkbox" name="baxter-of-california" checked>							
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="mr-natty">
-							Mr Natty
+							<label for="filter-mr-natty">Mr Natty</label>
+							<input class="visually-hidden filter-input filter-input-checkbox filter-mr-natty" id="filter-mr-natty" type="checkbox" name="mr-natty">							
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="suavecito" checked>
-							Suavecito
+							<label for="filter-suavecito">Suavecito</label>
+							<input class="visually-hidden filter-input filter-input-checkbox" id="filter-suavecito" type="checkbox" name="suavecito" checked>					
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="malin-goetz">
-							Malin+Goetz
+							<label for="filter-malin-goetz">Malin+Goetz</label>
+							<input class="visually-hidden filter-input filter-input-checkbox" id="filter-malin-goetz" type="checkbox" name="malin-goetz">						
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="murrays" checked>
-							Murray's
+							<label for="filter-murrays">Murray's</label>
+							<input class="visually-hidden filter-input filter-input-checkbox" id="filter-murrays" type="checkbox" name="murrays" checked>							
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="american-crew">
-							American Crew
+							<label for="filter-american-crew">American Crew</label>
+							<input class="visually-hidden filter-input filter-input-checkbox" id="filter-american-crew" type="checkbox" name="american-crew">					
 						</li>
 					</ul>
 				</fieldset>
@@ -72,16 +72,16 @@
 					<legend>Группы товаров:</legend>
 					<ul>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="shaving">
-							Бритвенные принадлежности
+							<label for="filter-shave">Бритвенные принадлежности</label>
+							<input class="visually-hidden filter-input filter-input-radio" id="filter-shave" type="radio" name="product-group" value="shaving">							
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="hair-care" checked>
-							Средства для ухода
+							<label for="filter-care">Средства для ухода</label>
+							<input class="visually-hidden filter-input filter-input-radio" id="filter-care" type="radio" name="product-group" value="hair-care" checked>							
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-radio" type="radio" name="product-group" value="accesoires">
-							Аксессуары
+							<label for="filter-accesoires">Аксессуары</label>
+							<input class="visually-hidden filter-input filter-input-radio" id="filter-accesoires" type="radio" name="product-group" value="accesoires">							
 						</li>
 					</ul>
 				</fieldset>
