--- a/Barbershop/index.html
+++ b/Barbershop/index.html
@@ -129,8 +129,8 @@
 			<b>Давайте дружить!</b>
 			<ul class="footer-social-buttons">
 				<li><a class="social-button" href="#"><img src="../Barbershop/img/vk.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="../Barbershop/img/facebook.svg.svg"></a></li>
-				<li><a class="social-button" href="#"><img src="../Barbershop/img/instagram.svg.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/facebook.svg"></a></li>
+				<li><a class="social-button" href="#"><img src="../Barbershop/img/instagram.svg"></a></li>
 			</ul>			
 		</div>
 		<p class="footer-copyright">
