--- a/Barbershop/item.html
+++ b/Barbershop/item.html
@@ -19,7 +19,7 @@
 			</ul>
 			<ul class="user-navigation">
 				<li class="login-icon"><img src="../Barbershop/img/login.svg"></li>
-				<li class="login-link">Вход</li>
+				<li class="login-link" href="login.html>Вход</li>
 			</ul>
 		</nav>
 	</header>
